<resources>
    <string name="app_name">NotifyMe</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="number">Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="title_activity_channel">Channel</string>
    <string name="generate_otp">Generate Otp</string>
    <string name="confirm">CONFIRM</string>
    <string name="title_activity_settings">Settings</string>
    <string name="api_key">XSBBRP8YQ8JSP06I</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="enter_channel_id">Enter channel id</string>
    <string name="delete_chnnael">Delete chnnael</string>
    <string name="edit_channel">Edit Channel</string>
    <string name="title_activity_display_field">DisplayField</string>
    <string name="logout">Logout</string>
    <string name="toggle_notifications">Toggle Notifications</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="enable_notifications">Enable Notifications</string>
    <string name="old_password">old password</string>
    <string name="new_password">new password</string>
    <string name="change_password">Change password</string>
    <string name="delete_channel">Delete channel</string>
</resources>
