<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dip">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/signupemail" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:hint="@string/number"
        android:ems="10"
        android:id="@+id/signupnumber" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:hint="@string/password"
        android:id="@+id/signuppass" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:id="@+id/confirmpass" />

    <Button
        android:text="@string/generate_otp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/signupbutton" />
</LinearLayout>