<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dip"
    tools:context="com.leagueofshadows.notifyme.MainActivity$PlaceholderFragment"
    android:orientation="vertical">


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:ems="10"
        android:id="@+id/loginemail" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:hint="@string/password"
        android:id="@+id/loginpass" />

    <Button
        android:text="@string/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/loginbutton" />

    <Button
        android:text="Forgot password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/forgot" />
</LinearLayout>
